--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "code-quality-intelligence"
-version = "1.6.0"
+version = "1.6.1"
 description = "AI-powered code quality analysis tool with GitHub integration and interactive chatbot"
 authors = [{name = "Suvraadeep Das", email = "suvraadeep.das@gmail.com"}]
 license = "MIT"
-readme = "README.md"
+readme = "README-PYPI.md"
 requires-python = ">=3.8"
 keywords = ["code quality", "static analysis", "AI", "LLM", "security", "complexity", "GitHub", "chatbot"]
 classifiers = [
